# webarena

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  pypi.yml  tests.yml
agent/prompts/: prompt_constructor.py
evaluation_harness/: evaluators.py  helper_functions.py
